[gd_scene load_steps=4 format=3 uid="uid://3fiukknm56dq"]

[ext_resource type="Script" path="res://Scenes/Cutscenes/CutscenePlayer.gd" id="1_e37n1"]
[ext_resource type="Texture2D" uid="uid://d253mb7vwrsu2" path="res://Scenes/Cutscenes/TextBack.svg" id="2_jl215"]
[ext_resource type="Theme" uid="uid://uabuugcc4jy6" path="res://Art/Themes/BaseTheme.tres" id="3_1ymp5"]

[node name="CutscenePlayer" type="Node2D"]
visible = false
script = ExtResource("1_e37n1")

[node name="BoxControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="TextBack" type="Sprite2D" parent="BoxControl"]
position = Vector2(960, 540)
texture = ExtResource("2_jl215")

[node name="VBoxContainer" type="VBoxContainer" parent="BoxControl"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -849.0
offset_right = 849.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_1ymp5")
alignment = 1

[node name="CutsceneText" type="RichTextLabel" parent="BoxControl/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(1000, 40)
layout_mode = 2
theme = ExtResource("3_1ymp5")
theme_override_colors/default_color = Color(1, 0.694118, 0.647059, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]TESTING THE TEXT AND THERE SHOULD BE A LOT
"
scroll_active = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
